--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -578,6 +578,7 @@
 
   :host .hamburger {
     display: inline-flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: absolute;
@@ -585,6 +586,12 @@
     top: 50%;
     transform: translateY(-50%);
     margin-left: 0;
+    width: 44px;
+    height: 44px;
+    background: transparent;
+    border: none;
+    padding: 0;
+    box-shadow: none;
   }
 
   :host .mobile-menu {
